<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_enterprise_name"/>
        <EditText
            android:id="@+id/enter_enterprise_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_work_days"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_mon"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/mon"
                android:hint="Monday"
                android:textSize="10sp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_tue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/tue"
                android:hint="Tuesday"
                android:textSize="10sp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_wed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/wed"
                android:hint="Wednesday"
                android:textSize="10sp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_thu"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/thu"
                android:hint="Thursday"
                android:textSize="10sp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_fri"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fri"
                android:hint="Friday"
                android:textSize="10sp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_sat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sat"
                android:hint="Saturday"
                android:textSize="10sp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_sun"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sun"
                android:hint="Sunday"
                android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_start"
                android:layout_gravity="start"
                android:layout_marginRight="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/day_start" />

            <Button
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_gravity="end"
                android:id="@+id/btn_end"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/day_end" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_start"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
            <TextView
                android:id="@+id/text_end"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <TimePicker
            android:timePickerMode="spinner"
            android:layout_marginTop="5dp"
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_gravity="top"
            android:id="@+id/none_time_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holiday"/>
        <Button
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:id="@+id/create_enterprise_object_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_enterprise"/>
    </LinearLayout>
</LinearLayout>