<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department_name"/>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/employee_department_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/show_schedule_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_schedule_department"/>
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/add_job_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_work_button"/>
            <!--
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/show_schedule_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_schedule_department"/>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/add_job_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_job_button"/>
                -->
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/add_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_employee"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="center"
        android:id="@+id/create_employee_layout"
        android:visibility="gone">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_surname" />
                <EditText
                    android:id="@+id/employee_surname_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_name" />
                <EditText
                    android:id="@+id/employee_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_second_name" />
                <EditText
                    android:id="@+id/employee_second_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_maybe_holiday"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/employee_checkbox_mon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center" />
                    <CheckBox
                        android:id="@+id/employee_checkbox_tue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_wed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_thu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_fri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_sat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_sun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mon"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tue"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wed"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thu"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fri"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sat"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sun"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_priority_work"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/employee_checkbox_priority_morning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/employee_priority_morning"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_priority_afternoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/employee_priority_afternoon"/>
                    <CheckBox
                        android:id="@+id/employee_checkbox_priority_evening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/employee_priority_evening"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/employee_min_hour"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:id="@+id/employee_min_hour_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/employee_max_hour"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:id="@+id/employee_max_hour_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/create_employee_object_btn"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_employee"/>

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_gravity="center"
        android:id="@+id/listViewEmployee"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"/>
</LinearLayout>